# Pagal

./: .gitignore  .replit  README.md  app.py  discord_auth.py  git_instructions.md  main.py  models.py  pyproject.toml  render_setup.md
attached_assets/: Pasted--EduSphere-Education-Bot-Revolutionizing-Learning-on-Discord-Education-should-be-easy-accessibl-1739930056922.txt
static/css/: styles.css
static/js/: main.js
templates/: 404.html  500.html  ai-chat.html  education.html  index.html  music.html  support.html  ticket.html
